Support realm-specific tool arguments